--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="description" content="online resume">
   <meta name="author" content="rst">
   <title>Onilne CV</title>
-  <base href="/">
+  <base href="https://sagarteja.github.io/cv/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
